[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Fonts/Uni Sans Heavy.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/themes/normalButton.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Components/parrallax/ParallaxBackground.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=11]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=9]
resource_name = "Name_Bounce"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Label:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 152, 250 ), Vector2( 152, 230 ), Vector2( 152, 250 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Label:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 200 ) ]
}

[sub_resource type="DynamicFont" id=8]
size = 32
extra_spacing_char = 3
extra_spacing_space = 5
font_data = ExtResource( 1 )

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 4 )]

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
margin_bottom = 131.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="GridContainer" parent="Control/VBoxContainer"]
margin_right = 720.0
margin_bottom = 33.0
grow_horizontal = 0
grow_vertical = 0
columns = 2

[node name="Coins" type="Label" parent="Control/VBoxContainer/HBoxContainer"]
margin_left = 40.0
margin_top = 50.0
margin_right = 246.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 11 )
text = "COINS: 555757"
valign = 1

[node name="Highscore" type="Label" parent="Control/VBoxContainer/HBoxContainer"]
margin_left = 440.0
margin_top = 50.0
margin_right = 661.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 11 )
text = "Highscore: 45"
align = 2
valign = 1

[node name="Name" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -360.0
margin_right = 360.0
margin_bottom = 450.0

[node name="Label" type="Label" parent="Name"]
margin_top = 200.0
margin_right = 416.0
margin_bottom = 261.0
custom_fonts/font = SubResource( 1 )
text = "ROGUE BLOCKS"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Name"]
autoplay = "Name_Bounce"
anims/Name_Bounce = SubResource( 9 )
anims/RESET = SubResource( 10 )

[node name="Buttons" type="Control" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -202.0
margin_bottom = 641.0

[node name="Play" type="Button" parent="Buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -117.98
margin_top = -371.5
margin_right = 117.98
margin_bottom = -311.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 8 )
text = "PLAY"
icon_align = 1

[node name="Settings" type="Button" parent="Buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -117.98
margin_top = -271.5
margin_right = 117.98
margin_bottom = -211.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 8 )
text = "SETTINGS"
icon_align = 1

[node name="Quit" type="Button" parent="Buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -117.98
margin_top = -171.5
margin_right = 117.98
margin_bottom = -111.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 8 )
text = "QUIT"
icon_align = 1

[node name="Store" type="Button" parent="Buttons"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -220.0
margin_right = 235.96
margin_bottom = -160.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 8 )
text = "STORE"
icon_align = 1

[node name="Leaderboard" type="Button" parent="Buttons"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -220.0
margin_bottom = -160.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 8 )
text = "LEADERBOARD"
icon_align = 1

[connection signal="pressed" from="Buttons/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Buttons/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Buttons/Store" to="." method="_on_Store_pressed"]
[connection signal="pressed" from="Buttons/Leaderboard" to="." method="_on_Leaderboard_pressed"]
