extends CanvasLayer



# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.

func _on_Play_pressed():
	pass # Replace with function body.

func _on_Settings_pressed():
	pass # Replace with function body.

func _on_Quit_pressed():
	get_tree().quit()

func _on_Store_pressed():
	pass # Replace with function body.

func _on_Leaderboard_pressed():
	pass # Replace with function body.
